--- a/src/style.css
+++ b/src/style.css
@@ -24,21 +24,19 @@ h1 {
     font-size: 7em;
     color: white;
 }
-.encendido-h1.active {
+.apagado-h1 {}
+.encendido-h1 {
     display: none;
 }
-
 
 /* I */
 
 
-i {
+.light {
     font-size: 10em;
-    color: gray;
+    color: black;
 }
-i.active {
-    color: #ffe922;
-}
+
 
 /* BUTTONS */
 .btns {
@@ -50,17 +48,18 @@ i.active {
 button {
     width: 7em;
     height: 2.5em;
-    background-color: transparent;
-    border: 1px solid white;
+    background-color: rgb(71, 71, 71);
+    border: none;
     border-radius: 2em;
     cursor: pointer;
     font-size: 1.5em;
     color: white;
     padding: 0.5em;
+
+    transition: all 0.2s ease-in;
 }
 button:hover {
-    background-color: rgb(101, 18, 255);
-    border: none;
+    background-color: rgb(255, 196, 0);
 }
 
 
